// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Navigation/ErrorPages/500 Default 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-laRPJI gnaLBS sc-error-page500"
  >
    <div
      className="sc-nFpLZ gvQQYc"
    >
      <i
        className="sc-higXBA hqnamb fas fa-exclamation-triangle fa-2x"
      />
      <h2
        className="sc-iNqMTl cTvwmA"
      >
        Unexpected Error
      </h2>
    </div>
    <div
      className="sc-nFpLZ gvQQYc"
    >
      <div
        className="sc-jeGSBP gtqGta"
      >
        <p
          className="sc-eJMQSu gldhqr"
        >
          An error occured and your request cannot be completed.
        </p>
        <p
          className="sc-eJMQSu gldhqr"
        >
          You might check the url, or contact your admin if the error remains.
        </p>
      </div>
    </div>
    <a
      className="sc-fodVxV bJCdTb sc-button"
      disabled={false}
      href="/"
      size="large"
      title=""
    >
      <span
        className="sc-kstrdz ZegCk"
      >
        Return Home
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/ErrorPages/500 With Support Link 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-laRPJI gnaLBS sc-error-page500"
  >
    <div
      className="sc-nFpLZ gvQQYc"
    >
      <i
        className="sc-higXBA hqnamb fas fa-exclamation-triangle fa-2x"
      />
      <h2
        className="sc-iNqMTl cTvwmA"
      >
        Unexpected Error
      </h2>
    </div>
    <div
      className="sc-nFpLZ gvQQYc"
    >
      <div
        className="sc-jeGSBP gtqGta"
      >
        <p
          className="sc-eJMQSu gldhqr"
        >
          An error occured and your request cannot be completed.
        </p>
        <p
          className="sc-eJMQSu gldhqr"
        >
          You might check the url, or contact your admin if the error remains.
        </p>
        <p
          className="sc-eJMQSu gldhqr"
        >
          You may also contact
           
          <a
            className="sc-ehSCib gOwmRK"
            href="https://www.scality.com/support/"
          >
            support 
            <i
              className="fas fa-external-link-alt"
            />
          </a>
           
          to report this issue.
        </p>
      </div>
    </div>
    <a
      className="sc-fodVxV bJCdTb sc-button"
      disabled={false}
      href="/"
      size="large"
      title=""
    >
      <span
        className="sc-kstrdz ZegCk"
      >
        Return Home
      </span>
    </a>
  </div>
</div>
`;
